@@ -20,12 +20,12 @@
 package org.loklak.harvester.strategy;
 
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.NoSuchElementException;
 import java.util.Random;
 import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentLinkedDeque;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
@@ -37,26 +37,26 @@ import org.loklak.harvester.TwitterScraper;
 import org.loklak.harvester.TwitterScraper.TwitterTweet;
 import org.loklak.objects.QueryEntry;
 import org.loklak.objects.ResultList;
-import org.loklak.objects.Timeline;
-import org.loklak.objects.Timeline.Order;
+import org.loklak.objects.TwitterTimeline;
+import org.loklak.objects.BasicTimeline.Order;
 import org.loklak.tools.DateParser;
 
 public class ClassicHarvester implements Harvester {
 
-    private final int FETCH_RANDOM = 3;
-    private final int HITS_LIMIT_4_QUERIES = 20;
-    private final int MAX_PENDING = 200; // this could be much larger but we don't want to cache too many of these
-    private final int MAX_HARVESTED = 10000; // just to prevent a memory leak with possible OOM after a long time we flush that cache after a while
-    private final Random random = new Random(System.currentTimeMillis());
-    public final ExecutorService executor = Executors.newFixedThreadPool(1);
+    private final static int FETCH_MIN = 20;
+    private final static int HITS_LIMIT_4_QUERIES = 20;
+    private final static int MAX_PENDING = 300; // this could be much larger but we don't want to cache too many of these
+    private final static int MAX_HARVESTED = 10000; // just to prevent a memory leak with possible OOM after a long time we flush that cache after a while
+    private final static Random random = new Random(System.currentTimeMillis());
+    private final ExecutorService executor = Executors.newFixedThreadPool(1);
 
     private LinkedHashSet<String> pendingQueries = new LinkedHashSet<>();
-    private ArrayList<String> pendingContext = new ArrayList<>();
-    private Set<String> harvestedContext = new HashSet<>();
+    private ConcurrentLinkedDeque<String> pendingContext = new ConcurrentLinkedDeque<>();
+    private Set<String> harvestedContext = ConcurrentHashMap.newKeySet();
 
-    private int hitsOnBackend = 1000;
+    private int hitsOnBackend = 100;
 
-    public void checkContext(Timeline tl, boolean front) {
+    public void checkContext(TwitterTimeline tl, boolean front) {
         for (TwitterTweet tweet: tl) {
             for (String user: tweet.getMentions()) checkContext("from:" + user, front);
             for (String hashtag: tweet.getHashtags()) checkContext(hashtag, front);
@@ -66,9 +66,9 @@ public class ClassicHarvester implements Harvester {
     public void checkContext(String s, boolean front) {
         if (!front && pendingContext.size() > MAX_PENDING) return; // queue is full
         if (!harvestedContext.contains(s) && !pendingContext.contains(s)) {
-            if (front) pendingContext.add(0, s); else pendingContext.add(s);
+            if (front) pendingContext.addFirst(s); else pendingContext.addLast(s);
         }
-        while (pendingContext.size() > MAX_PENDING) pendingContext.remove(pendingContext.size() - 1);
+        while (pendingContext.size() > MAX_PENDING) pendingContext.removeLast();
         if (harvestedContext.size() > MAX_HARVESTED) harvestedContext.clear();
     }
 
@@ -77,10 +77,9 @@ public class ClassicHarvester implements Harvester {
 
         if (random.nextInt(100) != 0 && hitsOnBackend < HITS_LIMIT_4_QUERIES && pendingQueries.size() == 0 && pendingContext.size() > 0) {
             // harvest using the collected keys instead using the queries
-            int r = random.nextInt((pendingContext.size() / 2) + 1);
-            String q = pendingContext.remove(r);
+            String q = pendingContext.removeFirst();
             harvestedContext.add(q);
-            Timeline tl = TwitterScraper.search(q, Timeline.Order.CREATED_AT, true, true, 400);
+            TwitterTimeline tl = TwitterScraper.search(q, Order.CREATED_AT, true, true, 400);
             if (tl == null || tl.size() == 0) return -1;
 
             // find content query strings and store them in the context cache
@@ -92,7 +91,8 @@ public class ClassicHarvester implements Harvester {
         // load more queries if pendingQueries is empty
         if (pendingQueries.size() == 0) {
             try {
-                ResultList<QueryEntry> rl = SuggestServlet.suggest(backend, "", "query", Math.min(1000, Math.max(FETCH_RANDOM * 30, hitsOnBackend / 10)), "asc", "retrieval_next", DateParser.getTimezoneOffset(), null, "now", "retrieval_next", FETCH_RANDOM);
+                int fetch_random = Math.min(100, Math.max(FETCH_MIN, hitsOnBackend / 10));
+                ResultList<QueryEntry> rl = SuggestServlet.suggest(backend, "", "query", fetch_random * 5, "asc", "retrieval_next", DateParser.getTimezoneOffset(), null, "now", "retrieval_next", fetch_random);
                 for (QueryEntry qe: rl) {
                     pendingQueries.add(qe.getQuery());
                 }
@@ -103,7 +103,7 @@ public class ClassicHarvester implements Harvester {
                     if (pendingContext.size() == 0) {
                         // try to fill the pendingContext using a matchall-query from the cache
                         // http://loklak.org/api/search.json?source=cache&q=
-                        Timeline tl = SearchServlet.search(backend, "", Timeline.Order.CREATED_AT, "cache", 100, 0, SearchServlet.backend_hash, 60000);
+                        TwitterTimeline tl = SearchServlet.search(backend, "", Order.CREATED_AT, "cache", 100, 0, SearchServlet.backend_hash, 60000);
                         checkContext(tl, false);
                     }
                     // if we still don't have any context, we are a bit helpless and hope that this situation
@@ -125,11 +125,11 @@ public class ClassicHarvester implements Harvester {
             pendingQueries.remove(q);
             pendingContext.remove(q);
             harvestedContext.add(q);
-            Timeline tl = TwitterScraper.search(q, Timeline.Order.CREATED_AT, true, false, 400);
+            TwitterTimeline tl = TwitterScraper.search(q, Order.CREATED_AT, true, false, 400);
 
             if (tl == null || tl.size() == 0) {
                 // even if the result is empty, we must push this to the backend to make it possible that the query gets an update
-                if (tl == null) tl = new Timeline(Order.CREATED_AT);
+                if (tl == null) tl = new TwitterTimeline(Order.CREATED_AT);
                 tl.setQuery(q);
                 PushThread pushThread = new PushThread(backend, tl);
                 DAO.log( "starting push to backend; pendingQueries = " + pendingQueries.size() + ", pendingContext = " +
